<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <!-- res/layout/activity_main.xml -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <!-- TextView for indicating the turn at the top -->
        <TextView
            android:id="@+id/top_turn_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:rotation="180"
            android:text="@string/your_turn3"
            android:textSize="32sp"
            android:textColor="@color/black"

            android:textStyle="bold" />

        <!-- Game board or other game elements go here -->

        <!-- TextView for indicating the turn at the bottom -->
        <TextView
            android:id="@+id/bottom_turn_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:textStyle="bold"
android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:text="@string/your_turn1"
            android:textSize="32sp"
             />
    </RelativeLayout>



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="45dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_turn_indicator"
        app:srcCompat="@drawable/grid"
        tools:ignore="NotSibling,VisualLintBounds" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/t4"
                android:onClick="Player_tap"

                android:padding="20dp"
                android:paddingEnd="30dp"
                android:tag="0"

                tools:ignore="NestedWeights,RtlSymmetry,DuplicateSpeakableTextCheck" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/t5"
                android:onClick="Player_tap"
                android:padding="20dp"
                android:paddingEnd="30dp"
                android:tag="1"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/t6"
                android:onClick="Player_tap"
                android:padding="20dp"
                android:paddingEnd="30dp"
                android:tag="2"

                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/t7"
                android:onClick="Player_tap"
                android:padding="20dp"
                android:paddingEnd="30dp"
                android:tag="3"
                tools:ignore="NestedWeights,RtlSymmetry" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/t8"
                android:onClick="Player_tap"
                android:padding="20dp"
                android:paddingEnd="30dp"
                android:tag="4"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/t9"
                android:onClick="Player_tap"
                android:padding="20dp"
                android:paddingEnd="30dp"
                android:tag="5"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/t3"
                android:onClick="Player_tap"
                android:padding="20dp"
                android:paddingEnd="30dp"

                android:tag="6"
                tools:ignore="NestedWeights,RtlSymmetry" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/t2"
                android:onClick="Player_tap"
                android:padding="20dp"
                android:paddingEnd="30dp"
                android:tag="7"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:contentDescription="@string/todo1"
                android:onClick="Player_tap"
                android:padding="20dp"
                android:paddingEnd="30dp"
                android:tag="8"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>